--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>Cat Perry's Favorit Cats</title>
   </head>
   
   <body>
